--- a/src/controladdin/PDFViewer/stylesheet.css
+++ b/src/controladdin/PDFViewer/stylesheet.css
@@ -2,6 +2,7 @@
     max-width: 100%;
 	max-height: 100%;
 	height: 100%;
-	border: 5px solid rgba(0,0,0,.2);
+	flex: 1 1 auto;
+		/* border: 5px solid rgba(0,0,0,.2); */
 	margin: 0;
 }
